--- a/AllDianCan/app/src/main/res/layout/activity_home.xml
+++ b/AllDianCan/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
               android:orientation="vertical"
               tools:context=".HomeActivity">
     <FrameLayout
-        android:id="@+id/home_container"
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_weight="1">
