--- a/AllDianCan/app/src/main/res/values/styles.xml
+++ b/AllDianCan/app/src/main/res/values/styles.xml
@@ -4,4 +4,9 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
+    <style name="liststyle">
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
 </resources>
