--- a/AllDianCan/app/src/main/res/layout/bottom_menu_aboutme.xml
+++ b/AllDianCan/app/src/main/res/layout/bottom_menu_aboutme.xml
@@ -6,14 +6,15 @@
     <ImageView
         android:layout_width="match_parent"
         android:id="@+id/aboutme_icon"
-        android:layout_gravity="center_horizontal"
         android:src="@drawable/action_profile"
-        android:layout_marginTop="10dp"
-        android:layout_height="30dp"/>
+        android:layout_marginTop="1dp"
+        android:layout_height="25dp"/>
     <TextView
         android:layout_width="match_parent"
         android:id="@+id/aboutme_txt"
+        android:gravity="center_horizontal"
         android:text="@string/aboutme"
+        android:textSize="@dimen/abc_text_size_small_material"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
