--- a/AllDianCan/app/src/main/res/layout/activity_home.xml
+++ b/AllDianCan/app/src/main/res/layout/activity_home.xml
@@ -26,10 +26,11 @@
    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/bottom_layout"
+       android:layoutDirection="ltr"
        app:tabIndicatorHeight="0dp"
        app:tabSelectedTextColor="@android:color/black"
        app:tabTextColor="@android:color/darker_gray"
-       android:layout_height="50dp">
+       android:layout_height="wrap_content">
 
    </android.support.design.widget.TabLayout>
 
