--- a/AllDianCan/app/src/main/res/layout/bottom_menu_shoppingcar.xml
+++ b/AllDianCan/app/src/main/res/layout/bottom_menu_shoppingcar.xml
@@ -8,13 +8,14 @@
         android:id="@+id/shoppingcar_icon"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/bottom_action_shoping"
-        android:layout_marginTop="10dp"
-        android:layout_height="30dp"/>
+        android:layout_marginTop="1dp"
+        android:layout_height="25dp"/>
     <TextView
         android:layout_width="match_parent"
         android:id="@+id/shoppingcar_txt"
         android:text="@string/shoppingcar"
-        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:textSize="@dimen/abc_text_size_small_material"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
