--- a/AllDianCan/app/src/main/res/layout/recommend_list_items.xml
+++ b/AllDianCan/app/src/main/res/layout/recommend_list_items.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <RecyclerView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/list_items"
