--- a/AllDianCan/app/src/main/res/layout/home_fragment.xml
+++ b/AllDianCan/app/src/main/res/layout/home_fragment.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/home_txt"
         android:text="HomeFragment"/>
     <include
         layout="@layout/recommend_list_items"
