--- a/AllDianCan/app/src/main/res/layout/hot_fragment.xml
+++ b/AllDianCan/app/src/main/res/layout/hot_fragment.xml
@@ -5,8 +5,12 @@
               android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/hot_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText3"
-        android:text="HomeFragment"/>
+        android:text="HotFragment" />
+
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
