use webview embbed the h5 vue

--- a/AllDianCan/app/src/main/res/layout/about_me_fragment.xml
+++ b/AllDianCan/app/src/main/res/layout/about_me_fragment.xml
@@ -3,15 +3,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/aboutme_txt"
-        android:text="AboutMeFragment"/>
-
     <WebView
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent" />
 
 </LinearLayout>
