--- a/AllDianCan/app/src/main/res/values/styles.xml
+++ b/AllDianCan/app/src/main/res/values/styles.xml
@@ -9,4 +9,6 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
     </style>
+   <color name="btn_color">
+   </color>
 </resources>
