--- a/AllDianCan/app/src/main/res/drawable/loading_shap.xml
+++ b/AllDianCan/app/src/main/res/drawable/loading_shap.xml
@@ -4,7 +4,7 @@
   <size android:height="@dimen/loading_shape_height"
         android:width="@dimen/loading_shape_width">
   </size>
-    <corners android:radius="50dp"></corners>
+    <corners android:radius="@dimen/loading_shape_radius"></corners>
     <stroke android:color="@android:color/holo_blue_light"
         android:width="1dp"></stroke>
 </shape>
