add http call home page

--- a/AllDianCan/app/src/main/res/layout/home_fragment.xml
+++ b/AllDianCan/app/src/main/res/layout/home_fragment.xml
@@ -10,6 +10,7 @@
         android:id="@+id/home_txt"
         android:text="HomeFragment"/>
     <include
+        android:id="@+id/recommend_list"
         layout="@layout/recommend_list_items"
         style="@style/liststyle"
         >
